twitter stream and kafka listener

--- a/twitter-to-kafka-service/src/main/resources/application.yaml
+++ b/twitter-to-kafka-service/src/main/resources/application.yaml
@@ -4,4 +4,5 @@ twitter-to-kafka-service:
     - Microservices
     - Kafka
     - Elasticsearch
+    - Japan
   welcome-message: Hello microservices!
