--- a/twitter-to-kafka-service/src/main/resources/twitter4j.properties
+++ b/twitter-to-kafka-service/src/main/resources/twitter4j.properties
@@ -1,5 +1,5 @@
 debug=true
-oauth.consumerKey=****
-oauth.consumerSecret=****
-oauth.accessToken=****
-oauth.accessTokenSecret=****
+oauth.consumerKey=SpbOlkDd0Cxe2akfz4iN7B1ug
+oauth.consumerSecret=BfrPuTGARqZpW80Ol3XzYoH2ELAdsU7qxWchkA66TRClexRZ0u
+oauth.accessToken=1526499463098904577-hC7zxScM1b2K1QhfUBS4w49gPd1eHz
+oauth.accessTokenSecret=yvmdFm9yJcFnPb93yWoscs4ilvFyb6mOaUseBl69DnWHJ
